--- a/metricbeat/docs/modules/googlecloud.asciidoc
+++ b/metricbeat/docs/modules/googlecloud.asciidoc
@@ -17,15 +17,15 @@ Note: extra GCP charges on Stackdriver Monitoring API requests will be generated
 This is a list of the possible module parameters you can tune:
 
 * *zone*: A single string with the zone you want to monitor like `us-central1-a`.
-Or you can specific a partial zone name like `us-central1-`, which will monitor
-all zones start with `us-central1-`: `us-central1-a`, `us-central1-b`,
-`us-central1-c` and `us-central1-f`.
+Or you can specific a partial zone name like `us-central1-` or `us-central1-*`,
+which will monitor all zones start with `us-central1-`: `us-central1-a`,
+`us-central1-b`, `us-central1-c` and `us-central1-f`.
 Please see https://cloud.google.com/compute/docs/regions-zones#available[GCP zones]
 for zones that are available in GCP.
 
 * *region*: A single string with the region you want to monitor like `us-central1`.
 This will enable monitoring for all zones under this region. Or you can specific
-a partial region name like `us-east`, which will monitor all regions start with
+a partial region name like `us-east` or `us-east*`, which will monitor all regions start with
 `us-east`: `us-east1` and `us-east4`. If both region and zone are configured,
 only region will be used.
 Please see https://cloud.google.com/compute/docs/regions-zones#available[GCP regions]
@@ -33,9 +33,12 @@ for regions that are available in GCP.
 
 * *project_id*: A single string with your GCP Project ID
 
-* *credentials_file_path*: A single string pointing to the JSON file path reachable by Metricbeat that you have created using IAM.
+* *credentials_file_path*: A single string pointing to the JSON file path
+reachable by Metricbeat that you have created using IAM.
 
-* *exclude_labels*: (`true`/`false` default `false`) Do not extract extra labels and metadata information from Metricsets and fetch metrics onlly. At the moment, *labels and metadata extraction is only supported* in Compute Metricset.
+* *exclude_labels*: (`true`/`false` default `false`) Do not extract extra labels
+and metadata information from metricsets and fetch metrics only. At the moment,
+*labels and metadata extraction is only supported* in `compute` metricset.
 
 * *period*: A single time duration specified for this module collection frequency.
 
