[Elastic-Agent] Enable introspecting configuration (#18124)
* introspection

* changelog

* mage fmt

* introspect -> inspect

* follow -c argument

* conflicts

--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -47,4 +47,5 @@
 - Use data subfolder as default for process logs {pull}17960[17960]
 - Do not require unnecessary configuration {pull}18003[18003]
 - Enable debug log level for Metricbeat and Filebeat when run under the Elastic Agent. {pull}17935[17935]
+- Enable introspecting configuration {pull}18124[18124]
 - Follow home path for all config files {pull}18161[18161]
