--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -230,6 +230,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add system module process dataset ECS categorization fields. {pull}18032[18032]
 - Add system module socket dataset ECS categorization fields. {pull}18036[18036]
 - Add ECS categories for system module host dataset. {pull}18031[18031]
+- Add system module package dataset ECS categorization fields. {pull}18033[18033]
 
 *Filebeat*
 
