--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -233,6 +233,8 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add system module package dataset ECS categorization fields. {pull}18033[18033]
 - Add system module login dataset ECS categorization fields. {pull}18034[18034]
 - Add system module user dataset ECS categorization fields. {pull}18035[18035]
+- Add file integrity module ECS categorization fields. {pull}18012[18012]
+- Add `file.mime_type`, `file.extension`, and `file.drive_letter` for file integrity module. {pull}18012[18012]
 
 *Filebeat*
 
