[Elastic Agent] Fix jq: command not found  (#18408)
* install jq in separate steps

* changelog

* move up

* comment

* embarrasing commit

* tidy

* Update dev-tools/packaging/templates/docker/Dockerfile.elastic-agent.tmpl

Co-authored-by: Blake Rouse <blake.rouse@elastic.co>

Co-authored-by: Blake Rouse <blake.rouse@elastic.co>

--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -33,6 +33,7 @@
 - Fix default configuration after enroll {pull}18232[18232]
 - Fix make sure the collected logs or metrics include streams information. {pull}18261[18261]
 - Stop monitoring on config change {pull}18284[18284]
+- Fix jq: command not found {pull}18408[18408]
 
 ==== New features
 
