--- a/libbeat/docs/opendashboards.asciidoc
+++ b/libbeat/docs/opendashboards.asciidoc
@@ -11,12 +11,13 @@
 
 To open the dashboards, launch the {kib} web interface by pointing your browser
 to port 5601. For example, http://localhost:5601[http://localhost:5601].
-Replace `localhost` with the name of the {kib} host.  If you're using an
-https://cloud.elastic.co/[{ecloud}] instance, log in to your cloud account,
-then navigate to the {kib} endpoint in your deployment.
+Replace `localhost` with the name of the {kib} host.  If you're using our
+https://www.elastic.co/cloud/elasticsearch-service[hosted {ess}] instance, log
+in to your cloud account, then navigate to the {kib} endpoint in your
+deployment.
 
-On the *Discover* page, make sure that the predefined +{beatname_lc}-*+ index
-pattern is selected to see {beatname_uc} data.
+In the side navigation, click *Discover*. To see {beatname_uc} data, make sure
+the predefined +{beatname_lc}-*+ index pattern is selected.
 
 [role="screenshot"]
 image::./images/kibana-created-indexes.png[Discover tab with index selected]
@@ -24,7 +25,8 @@ image::./images/kibana-created-indexes.png[Discover tab with index selected]
 TIP: If you don’t see data in {kib}, try changing the date range to a larger
 range. By default, {kib} shows the last 15 minutes.
 
-Go to the *Dashboard* page and select the dashboard that you want to open.
+In the side navigation, click *Dashboard*, then select the dashboard that you
+want to open.
 
 [role="screenshot"]
 image::./images/kibana-navigation-vis.png[Navigation widget in Kibana]
